2005-08-27  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (blink-matching-paren-distance): Document the meaning
	of nil value, and allow to customize to nil.

	* eshell/esh-ext.el (eshell-windows-shell-file): Look for
	command.com, not command.exe.

2005-08-26  John Wiegley  <johnw@newartisans.com>

	* eshell/esh-cmd.el (eshell-rewrite-named-command): Changed the
	code around a bit so that an extraneous nil argument is not added
	to a command when no args are given.

	* eshell/esh-arg.el (eshell-parse-double-quote): If a
	double-quoted argument resolves to nil, return it as an empty
	string rather than as nil.  This made it impossible to pass "" to
	a shell script as a null string argument.

2005-08-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* outline.el (outline-invent-heading): New fun.
	(outline-promote, outline-demote): Use it.
	(outline-move-subtree-down): Remove unused vars `re' and `txt'.
	(outline-end-of-subtree): Remove unused var `opoint'.

2005-08-26  David Reitter  <david.reitter@gmail.com>

	* menu-bar.el (truncate-lines, write-file, print-buffer)
	(ps-print-buffer-faces, ps-print-buffer, split-window):
	Disable menu items when the frame they refer to is invisible, or when
	they refer to a buffer and the minibuffer is selected.

2005-08-26  Pavel Kobiakov  <pk_at_work@yahoo.com>

	* progmodes/flymake.el (flymake-highlight-err-lines):
	Use save-excursion around flymake-highlight-line to preserve point.

2005-08-26  Eli Zaretskii  <eliz@gnu.org>

	* progmodes/octave-mod.el: Change Author and Maintainer address.
	(octave-maintainer-address): Change Kurt's email address.
	* progmodes/octave-inf.el: Change Author and Maintainer address.
	* progmodes/octave-hlp.el: Change Author and Maintainer address.

2005-08-26  Kim F. Storm  <storm@cua.dk>

	* subr.el (version-list-<, version-list-<=, version-list-=):
	Renamed from integer-list-*.
	(version-list-not-zero): Likewise.  Fix while loop.
	(version=): Use version-list-= instead of string-equal.
